Test: Seeing how a function looks on iPhone not a fix

--- a/public/css/calendar.css
+++ b/public/css/calendar.css
@@ -158,7 +158,7 @@ table tbody tr{
       /* height: -webkit-fill-available; */
 			
       /* overflow-x: scroll; */
-			/* position: absolute; */
+			position: absolute;
 			top: 100%;
 			left: 0;
   
